# TangledWarfare

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/glad/: glad.h
src/: animation.cpp  animation.h  atlas.cpp  atlas.h  camera.cpp  camera.h  game.cpp  game.h  game_scene.cpp  game_scene.h  gameobject.cpp  gameobject.h  main.cpp  menu_scene.cpp  menu_scene.h  resource_manager.cpp  resource_manager.h  scene.h  scene_manager.cpp  scene_manager.h  selector_scene.cpp  selector_scene.h  shader.cpp  shader.h  sprite_renderer.cpp  sprite_renderer.h  texture.cpp  texture.h  timer.cpp  timer.h  util.h
